--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,11 @@
+body {
+ background-color: #2ec180;
+}
+
+header h1 {
+  font-family: 'Belgrano', serif;
+  text-align: center;
+}
 article p {
   font-family: 'Belgrano', serif;
   font-size: 1em;
